@@ -1,3 +1,8 @@
+Wed Apr 13 14:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/ORBInitInfo.cpp:
+          Simplified some checks
+
 Wed Apr 13 07:06:11 2005  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * tao/CORBALOC_Parser.cpp:
